--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header
+    <!-- <header
       id="main-header"
       class="w-full sticky top-0 z-50 bg-white transition-shadow duration-300"
     >
@@ -58,10 +58,117 @@
           </button>
         </div>
       </nav>
+    </header> -->
+    <!-- Header -->
+    <header
+      id="main-header"
+      class="w-full sticky top-0 z-50 bg-white shadow-sm transition-shadow duration-300"
+    >
+      <nav class="w-full bg-white px-4 py-3 flex justify-between items-center">
+        <!-- Logo -->
+        <div class="flex-shrink-0">
+          <a href="#">
+            <img src="/img/logo.png" alt="Logo" class="h-10 w-auto" />
+          </a>
+        </div>
+
+        <!-- Navigation (Desktop & Tablet) -->
+        <div
+          class="hidden md:flex flex-1 justify-center items-center gap-8 font-semibold"
+        >
+          <a
+            href="#"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
+            Beranda
+            <span
+              class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
+            ></span>
+          </a>
+
+          <a
+            href="#faq"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
+            FAQ
+            <span
+              class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
+            ></span>
+          </a>
+        </div>
+
+        <!-- Login Button (Desktop & Tablet) -->
+        <div class="hidden md:block">
+          <button
+            onclick="window.location.href='/login'"
+            class="cursor-pointer border px-6 py-[6px] rounded border-green-600 text-green-600 font-semibold hover:bg-green-600 hover:text-white transition"
+          >
+            Login
+          </button>
+        </div>
+
+        <!-- Hamburger Button (Mobile only) -->
+        <button
+          id="menu-toggle"
+          class="md:hidden flex items-center text-green-600 focus:outline-none"
+          aria-label="Toggle menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+      </nav>
+
+      <!-- Menu (Mobile only) -->
+      <div
+        id="nav-links"
+        class="hidden md:hidden flex-col absolute top-[64px] left-0 w-full bg-white shadow-md border-t border-gray-100 font-semibold text-center"
+      >
+        <a
+          href="#"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Beranda
+        </a>
+
+        <a
+          href="#faq"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          FAQ
+        </a>
+
+        <a
+          href="/login"
+          class="block py-3 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Login
+        </a>
+      </div>
     </header>
 
+    <!-- JS toggle -->
+    <script>
+      const btn = document.getElementById("menu-toggle");
+      const nav = document.getElementById("nav-links");
+      btn.addEventListener("click", () => {
+        nav.classList.toggle("hidden");
+      });
+    </script>
+
     <!-- Hero Section -->
-    <section
+    <!-- <section
       class="relative bg-cover bg-center bg-no-repeat h-[calc(100vh-100px)] flex flex-col items-center justify-center text-center"
       style="
         background-image: url('https://gelora-public-storage.s3-ap-southeast-1.amazonaws.com/upload/public-20230116035033.jpg');
@@ -91,17 +198,61 @@
           </button>
         </form>
       </div>
+    </section> -->
+    <!-- Hero Section -->
+    <section
+      class="relative bg-cover bg-center bg-no-repeat min-h-[70vh] md:min-h-[calc(100vh-100px)] flex flex-col items-center justify-center text-center"
+      style="
+        background-image: url('https://gelora-public-storage.s3-ap-southeast-1.amazonaws.com/upload/public-20230116035033.jpg');
+      "
+    >
+      <!-- Overlay -->
+      <div class="absolute inset-0 bg-black/55"></div>
+
+      <!-- Content -->
+      <div class="relative z-10 px-6 sm:px-8 lg:px-12">
+        <h1
+          class="text-white text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight"
+        >
+          Perlu bantuan?
+        </h1>
+        <p
+          class="text-white text-base sm:text-lg md:text-xl mb-8 max-w-2xl mx-auto"
+        >
+          Silahkan ketik pencarian anda atau gunakan kirim tiket
+        </p>
+
+        <form
+          class="flex items-center justify-center w-full max-w-md mx-auto bg-white/10 backdrop-blur-sm rounded-lg overflow-hidden shadow-md"
+        >
+          <input
+            type="text"
+            placeholder="Pencarian..."
+            class="flex-1 px-4 py-3 text-sm sm:text-base focus:outline-none text-gray-800"
+          />
+          <button
+            type="submit"
+            class="bg-green-600 hover:bg-green-700 text-white px-5 py-[10.7px] sm:px-6 sm:py-[12px] font-medium transition-colors duration-300"
+          >
+            Cari
+          </button>
+        </form>
+      </div>
     </section>
 
     <!-- FAQ -->
     <section id="faq" class="py-16 bg-white">
       <!-- Title -->
       <div class="mb-12 px-4 w-full flex justify-center">
-        <div class="w-[40%] text-center">
-          <h2 class="text-3xl md:text-4xl font-bold text-gray-900">
+        <div class="w-full sm:w-[80%] md:w-[60%] lg:w-[45%] text-center">
+          <h2
+            class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 leading-tight"
+          >
             Layanan Helpdesk UNWAHAS
           </h2>
-          <p class="text-gray-500 mt-3 max-w-2xl mx-auto">
+          <p
+            class="text-gray-500 mt-3 text-sm sm:text-base md:text-lg max-w-2xl mx-auto"
+          >
             Beberapa informasi yang kami sediakan berdasarkan pertanyaan yang
             sering ditanyakan.
           </p>
