--- a/faq/index.html
+++ b/faq/index.html
@@ -22,26 +22,34 @@
     <!-- Header -->
     <header
       id="main-header"
-      class="w-full sticky top-0 z-50 bg-white transition-shadow duration-300"
+      class="w-full sticky top-0 z-50 bg-white shadow-sm transition-shadow duration-300"
     >
       <nav class="w-full bg-white px-4 py-3 flex justify-between items-center">
-        <div class="w-[180px]">
-          <a href="/">
-            <img src="/img/logo.png" alt="Logo" />
+        <!-- Logo -->
+        <div class="flex-shrink-0">
+          <a href="#">
+            <img src="/img/logo.png" alt="Logo" class="h-10 w-auto" />
           </a>
         </div>
 
+        <!-- Navigation (Desktop & Tablet) -->
         <div
-          class="w-[70%] text-center font-semibold flex justify-center gap-8"
+          class="hidden md:flex flex-1 justify-center items-center gap-8 font-semibold"
         >
-          <a href="/" class="relative group pb-1">
+          <a
+            href="/"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             Beranda
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
             ></span>
           </a>
 
-          <a href="/#faq" class="relative group pb-1">
+          <a
+            href="/#faq"
+            class="relative group pb-1 hover:text-green-600 transition"
+          >
             FAQ
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
@@ -49,21 +57,83 @@
           </a>
         </div>
 
-        <div class="w-[180px] text-right">
+        <!-- Login Button (Desktop & Tablet) -->
+        <div class="hidden md:block">
           <button
+            onclick="window.location.href='/login'"
             class="cursor-pointer border px-6 py-[6px] rounded border-green-600 text-green-600 font-semibold hover:bg-green-600 hover:text-white transition"
           >
             Login
           </button>
         </div>
+
+        <!-- Hamburger Button (Mobile only) -->
+        <button
+          id="menu-toggle"
+          class="md:hidden flex items-center text-green-600 focus:outline-none"
+          aria-label="Toggle menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
       </nav>
+
+      <!-- Menu (Mobile only) -->
+      <div
+        id="nav-links"
+        class="hidden md:hidden flex-col absolute top-[64px] left-0 w-full bg-white shadow-md border-t border-gray-100 font-semibold text-center"
+      >
+        <a
+          href="/"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Beranda
+        </a>
+
+        <a
+          href="/#faq"
+          class="block py-3 border-b border-gray-100 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          FAQ
+        </a>
+
+        <a
+          href="/login"
+          class="block py-3 hover:bg-gray-50 hover:text-green-600 transition"
+        >
+          Login
+        </a>
+      </div>
     </header>
+
+    <!-- JS toggle -->
+    <script>
+      const btn = document.getElementById("menu-toggle");
+      const nav = document.getElementById("nav-links");
+      btn.addEventListener("click", () => {
+        nav.classList.toggle("hidden");
+      });
+    </script>
 
     <!-- FAQ -->
     <section class="py-16 bg-white min-h-[calc(100vh-100px)]">
       <!-- Title -->
       <div class="mb-12 px-4 w-full text-center mb-[100px]">
-        <h2 class="text-3xl md:text-3xl font-bold text-gray-900">
+        <h2
+          class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 leading-tight"
+        >
           Pertanyaan yang Sering Diajukan
         </h2>
       </div>
