--- a/login/index.html
+++ b/login/index.html
@@ -20,15 +20,22 @@
   </head>
   <body>
     <!-- Main  -->
-    <main class="flex">
+    <!-- Main -->
+    <main class="flex flex-col md:flex-row min-h-screen">
       <!-- Kiri -->
       <div
-        class="w-[60%] h-screen bg-[url('/img/background.png')] bg-cover"
+        class="hidden md:block md:w-[60%] h-[50vh] md:h-screen bg-[url('/img/background.png')] bg-cover bg-center"
       ></div>
+
       <!-- Kanan -->
-      <div class="w-[40%]">
-        <div class="w-[80%] mx-auto mt-20">
-          <form class="rounded-2xl p-8 w-full space-y-6" action="/aktor">
+      <div
+        class="w-full md:w-[40%] flex items-center justify-center py-10 md:py-0"
+      >
+        <div class="w-[90%] sm:w-[80%] md:w-[80%] mx-auto">
+          <form
+            class="rounded-2xl p-8 w-full space-y-6 shadow-sm md:shadow-none"
+            action="/aktor"
+          >
             <h1 class="text-2xl font-semibold text-gray-800 text-center">
               Selamat Datang
             </h1>
@@ -70,7 +77,6 @@
                 id="togglePassword"
                 class="absolute inset-y-2 right-2 top-8 flex items-center text-gray-500 hover:text-green-600 focus:outline-none"
               >
-                <!-- Ikon default mata -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   id="eyeIcon"
@@ -120,6 +126,7 @@
         </div>
       </div>
     </main>
+
     <!-- Footer -->
     <footer
       class="w-full bg-green-600 py-6 text-center text-[0.8rem] text-white"
