--- a/ticket/send-ticket/index.html
+++ b/ticket/send-ticket/index.html
@@ -316,7 +316,7 @@
       id="boxModalAfterSending"
     >
       <div
-        class="h-[calc(100vh-10%)] bg-white text-center text-gray-600 w-[90%] sm:w-[70%] md:w-[50%] lg:w-[40%] max-h-[95vh] py-10 px-6 rounded-lg transform scale-95 opacity-0 transition-all duration-300 relative shadow-xl"
+        class="h-[80vh] bg-white text-center text-gray-600 w-[95%] sm:w-[70%] md:w-[50%] lg:w-[40%] max-h-[95vh] py-10 px-6 rounded-lg transform scale-95 opacity-0 transition-all duration-300 relative shadow-xl"
         id="modalAfterSending"
       >
         <!-- Tombol Close -->
