--- a/ticket/send-ticket/index.html
+++ b/ticket/send-ticket/index.html
@@ -196,10 +196,10 @@
                 name="unit"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md bg-white focus:ring-2 focus:ring-green-400 focus:outline-none"
               >
-                <option value="">Pilih unit</option>
-                <option value="unit1">Unit 1</option>
-                <option value="unit2">Unit 2</option>
-                <option value="unit3">Unit 3</option>
+                <option value="">Pilih Unit</option>
+                <option value="fakultas">Fakultas</option>
+                <option value="prodi">Prodi</option>
+                <option value="unit">Unit</option>
               </select>
             </div>
 
@@ -214,10 +214,10 @@
                 name="status"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md bg-white focus:ring-2 focus:ring-green-400 focus:outline-none"
               >
-                <option value="">Pilih status</option>
-                <option value="status1">Status 1</option>
-                <option value="status2">Status 2</option>
-                <option value="status3">Status 3</option>
+                <option value="">Pilih Status</option>
+                <option value="dosen">Dosen</option>
+                <option value="tendik">Tendik</option>
+                <option value="mahasiswa">Mahasiswa</option>
               </select>
             </div>
           </div>
