External CSS And JS

--- a/faq/detail/index.html
+++ b/faq/detail/index.html
@@ -7,16 +7,7 @@
     <title>Helpdesk UNWAHAS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/fontawesome-free-7.1.0-web/css/all.min.css" />
-    <style>
-      /* Scrollbar Style */
-      body::-webkit-scrollbar {
-        width: 5px;
-      }
-      body::-webkit-scrollbar-thumb {
-        background: #16a34a;
-        border-radius: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <!-- Header -->
@@ -117,15 +108,6 @@
         </a>
       </div>
     </header>
-
-    <!-- JS toggle -->
-    <script>
-      const btn = document.getElementById("menu-toggle");
-      const nav = document.getElementById("nav-links");
-      btn.addEventListener("click", () => {
-        nav.classList.toggle("hidden");
-      });
-    </script>
 
     <!-- FAQ -->
     <section class="py-16 bg-white min-h-[calc(100vh-100px)]">
@@ -235,21 +217,6 @@
     </footer>
 
     <!-- Script -->
-    <script>
-      //   Smooth Scroll
-      const header = document.getElementById("main-header");
-
-      window.addEventListener("scroll", () => {
-        if (window.scrollY > 10) {
-          header.classList.add("shadow-md", "bg-white/95", "backdrop-blur-sm");
-        } else {
-          header.classList.remove(
-            "shadow-md",
-            "bg-white/95",
-            "backdrop-blur-sm"
-          );
-        }
-      });
-    </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
