--- a/login/index.html
+++ b/login/index.html
@@ -7,19 +7,9 @@
     <title>Helpdesk UNWAHAS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/fontawesome-free-7.1.0-web/css/all.min.css" />
-    <style>
-      /* Scrollbar Style */
-      home::-webkit-scrollbar {
-        width: 5px;
-      }
-      home::-webkit-scrollbar-thumb {
-        background: #16a34a;
-        border-radius: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <!-- Main  -->
     <!-- Main -->
     <main class="flex flex-col md:flex-row min-h-screen">
       <!-- Kiri -->
@@ -142,24 +132,22 @@
 
     <!-- Script -->
     <script>
+      // Password Show & Hide
       const passwordInput = document.getElementById("password");
       const togglePassword = document.getElementById("togglePassword");
       const eyeIcon = document.getElementById("eyeIcon");
-
       let isVisible = false;
-
       togglePassword.addEventListener("click", () => {
         isVisible = !isVisible;
         passwordInput.setAttribute("type", isVisible ? "text" : "password");
-
-        // Ganti ikon pakai innerHTML biar nggak kehilangan event listener
         eyeIcon.innerHTML = isVisible
           ? `<path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223a10.477 10.477 0 00-.955 3.777 10.477 10.477 0 00.955 3.777m16.04-7.554a10.477 10.477 0 01.955 3.777 10.477 10.477 0 01-.955 3.777M12 4.5c-4.728 0-8.578 3.01-9.964 7.178a1.012 1.012 0 000 .644C3.422 16.49 7.272 19.5 12 19.5c4.728 0 8.578-3.01 9.964-7.178a1.012 1.012 0 000-.644C20.578 7.51 16.728 4.5 12 4.5z" />
-         <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-         <path stroke-linecap="round" stroke-linejoin="round" d="M3 3l18 18" />`
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3 3l18 18" />`
           : `<path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.272 4.5 12 4.5c4.728 0 8.578 3.01 9.964 7.183.07.207.07.431 0 .639C20.578 16.49 16.728 19.5 12 19.5c-4.728 0-8.578-3.01-9.964-7.178z" />
-         <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />`;
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />`;
       });
     </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
