--- a/ticket/send-ticket/index.html
+++ b/ticket/send-ticket/index.html
@@ -7,16 +7,7 @@
     <title>Helpdesk UNWAHAS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/fontawesome-free-7.1.0-web/css/all.min.css" />
-    <style>
-      /* Scrollbar Style */
-      body::-webkit-scrollbar {
-        width: 5px;
-      }
-      body::-webkit-scrollbar-thumb {
-        background: #16a34a;
-        border-radius: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <!-- Header -->
@@ -117,14 +108,6 @@
         </a>
       </div>
     </header>
-    <!-- JS toggle -->
-    <script>
-      const btn = document.getElementById("menu-toggle");
-      const nav = document.getElementById("nav-links");
-      btn.addEventListener("click", () => {
-        nav.classList.toggle("hidden");
-      });
-    </script>
 
     <!-- Send Ticket -->
     <section
@@ -327,7 +310,10 @@
           <i class="fa-solid fa-xmark"></i>
         </span>
 
-        <div class="overflow-y-auto w-full h-[100%]">
+        <div
+          id="containerModalAfterSending"
+          class="overflow-y-auto w-full h-[100%]"
+        >
           <!-- Icon -->
           <div class="w-full flex justify-center mb-4">
             <span
@@ -374,48 +360,6 @@
     </section>
 
     <!-- Script -->
-    <script>
-      // Modal After Sending
-      const buttonOpenModalAfterSending = document.getElementById(
-        "buttonOpenModalAfterSending"
-      );
-      const buttonCloseModalAfterSending = document.getElementById(
-        "buttonCloseModalAfterSending"
-      );
-      const boxModalAfterSending = document.getElementById(
-        "boxModalAfterSending"
-      );
-      const modalAfterSending = document.getElementById("modalAfterSending");
-
-      buttonOpenModalAfterSending.addEventListener("click", () => {
-        boxModalAfterSending.classList.remove("hidden");
-        setTimeout(() => {
-          modalAfterSending.classList.remove("scale-95", "opacity-0");
-          modalAfterSending.classList.add("scale-100", "opacity-100");
-        }, 50);
-      });
-
-      buttonCloseModalAfterSending.addEventListener("click", () => {
-        modalAfterSending.classList.remove("scale-100", "opacity-100");
-        modalAfterSending.classList.add("scale-95", "opacity-0");
-        setTimeout(() => {
-          boxModalAfterSending.classList.add("hidden");
-        }, 300);
-      });
-      //   Smooth Scroll
-      const header = document.getElementById("main-header");
-
-      window.addEventListener("scroll", () => {
-        if (window.scrollY > 10) {
-          header.classList.add("shadow-md", "bg-white/95", "backdrop-blur-sm");
-        } else {
-          header.classList.remove(
-            "shadow-md",
-            "bg-white/95",
-            "backdrop-blur-sm"
-          );
-        }
-      });
-    </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
