--- a/superadmin/tiket/detail/index.html
+++ b/superadmin/tiket/detail/index.html
@@ -203,7 +203,7 @@
             <span
               class="bg-red-300 px-3 text-sm font-semibold text-red-600 rounded-md mt-1"
             >
-              Baru
+              Belum Diproses
             </span>
           </span>
           <span class="flex justify-between">
