--- a/superadmin/tiket/index.html
+++ b/superadmin/tiket/index.html
@@ -78,8 +78,6 @@
       .ts-wrapper {
         width: 100% !important;
       }
-
-      /* Biar dropdown-nya sejajar rapi */
       .ts-dropdown {
         width: 100% !important;
       }
@@ -192,7 +190,7 @@
       >
         <div class="w-[170px]">
           <img
-            src="https://sicantik.unwahas.ac.id/assets/images/logobaru3duwh.png"
+            src="https://sicantik.unwahas.ac.id/assets/images/logoBelum Diproses3duwh.png"
             alt=""
           />
         </div>
@@ -308,7 +306,7 @@
                 placeholder="Pilih Status..."
               >
                 <option value="all">Semua Status</option>
-                <option value="Baru">Baru</option>
+                <option value="Belum Diproses">Belum Diproses</option>
                 <option value="Dalam Proses">Dalam Proses</option>
                 <option value="Selesai">Selesai</option>
               </select>
@@ -473,7 +471,9 @@
                 <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3 text-red-600 font-semibold">Baru</td>
+                <td class="px-4 py-3 text-red-600 font-semibold">
+                  Belum Diproses
+                </td>
                 <td class="px-4 py-3 text-center">
                   <div class="flex justify-center gap-2">
                     <a href="/superadmin/tiket/detail">
@@ -661,7 +661,9 @@
                 <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3 text-red-600 font-semibold">Baru</td>
+                <td class="px-4 py-3 text-red-600 font-semibold">
+                  Belum Diproses
+                </td>
                 <td class="px-4 py-3 text-center">
                   <div class="flex justify-center gap-2">
                     <a href="/superadmin/tiket/detail">
